# lin-alg

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  test  test20251018_195849
include/: concepts.hpp  linalg.hpp  matrix.hpp  matrix.ipp  matrix_constructors.ipp  matrix_operators.ipp  vector.hpp
neural_net/: EvalResult.cpp  EvalResult.hpp  Optimizer.cpp  Optimizer.hpp  classification_metrics.cpp  classification_metrics.hpp  confusion_matrix.cpp  confusion_matrix.hpp  helper.cpp  helper.hpp  net.cpp  net.hpp  optimizer.cpp  optimizer.hpp
src/: helloworld.cpp  loadEval.cpp  nntest.cpp
tests/: matrix.cpp  matrix_iterator_test.cpp  operators.cpp  tests.cpp  vector.cpp  vector_tests.cpp
